# Tools

AstraCapture/: AstraCapture.vcxproj  AstraCaptureConfig.ini
AstraCapture/Props/: NI2_CV241_Debug.props  NI2_CV241_Release.props  NI2_CV241_Release.props.props
AstraCapture/include/: RGBDCamera.h
AstraPortal/: README  astra_portal.ini  camera_params_1702033232.ini  camera_params_17050311041.ini  orbbec_common.h  orbbec_depth_label.cpp  orbbec_depth_label.h  orbbec_main.cpp  orbbec_main_window.cpp  orbbec_main_window.h  orbbec_main_window.ui  orbbec_pointcloud_gl_widget.cpp  orbbec_pointcloud_gl_widget.h  orbbec_sensors.cpp  orbbec_sensors.h  orbbec_util.h  qt_pointcloud.pro
AstraProViewer-Linux/AstraProViewer/: CIniFile.cpp  CIniFile.h  CMakeLists.txt  RGB-D-calibration-sample-code.cpp  RGB-D-calibration-sample-code.h  camera_params.ini  config.ini  main.cpp
AstraProViewer-Linux/AstraProViewer/platform/: CMakeLists-x86.txt
AstraViewer/: config.ini
AstraViewer-Linux/: AstraViewer  CMakeLists.txt  Config.h  Draw.cpp  Draw.h  File.h  Key.cpp  Key.h  Makefile  PointCloud.cpp  PointCloud.h  RGBDCamera.cpp  RGBDCamera.h  SoftwareRegistrator.cpp  SoftwareRegistrator.h  camera_params.ini  main.cpp
NiViewer-Windows/: .gitignore  redist.bat
obGain/: ObGain.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
obMeasure/: .gitignore  FlatnessTester.sln  FlatnessTester.vcxproj
obPng2Pointcloud/: AstraIO.cpp  AstraIO.h  README  SoftwareRegistrator.cpp  SoftwareRegistrator.h  main.cpp
obReader/: Qt-ObReader.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
obWriter/: Qt-ObWriter.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tangodemo/: README
(+62 files in other folders)
